--- a/src/app/components/pages/shop/shop.component.html
+++ b/src/app/components/pages/shop/shop.component.html
@@ -37,7 +37,7 @@
                                         <img class="avt-img" src="{{member.images[0]}}" alt="">
                                     </picture>
                                     <div class="txt-user">
-                                        <h5>{{member.price}} <span>ETH</span></h5>
+                                        <h5> <span>{{member.categoria}} </span></h5>
                                         <p>{{member.name}} <i class="ri-checkbox-circle-fill"></i> </p>
                                     </div>
                                 </a>
