--- a/src/app/components/pages/shop/shop.component.html
+++ b/src/app/components/pages/shop/shop.component.html
@@ -21,7 +21,7 @@
                         <p>Seleccione un estilista para ver el detalle o asigne un trabajo</p>
                     </div>
                     <div class="un-block-right">
-                        <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.list" (click)="viewChange('grid')">
+                        <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.list || _butler.deviceType!='Escritorio'" (click)="viewChange('grid') " >
                             <i class="ri-layout-grid-fill" style="font-size:1rem;" ></i>
                         </a>
                         <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.grid" (click)="viewChange('list')">
@@ -74,7 +74,7 @@
                     <ul class="nav flex-column">
                         <li class="nav-item" *ngFor="let member of members$ | async" >
                             <div class="nav-link item-user-seller">
-                                <a href="page-creator-profile.html" class="item-user-img">
+                                <a class="item-user-img"  (click)="setPreview(member)">
                                     <picture>
                                         <source srcset="assets/assetsryal/images/avatar/22.webp" type="{{member.images[0]}}">
                                         <img class="avt-img" src="{{member.images[0]}}" alt="">
