--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,38 +1,52 @@
-     <header class="default heade-sticky">
-                <a href="index.html">
-                    <div class="un-item-logo">
-                        <img class="logo-img light-mode" src="assets/assetsryal/images/logo_07.png" alt="">
-                        <img class="logo-img dark-mode" src="assets/assetsryal/images/logo_07b.png" alt="">
-                    </div>
+     <header class="default heade-sticky" [hidden]=" router.url.includes('/member') ">
+        <a href="index.html">
+            <div class="un-item-logo">
+                <img class="logo-img light-mode" src="assets/assetsryal/images/logo_07.png" alt="">
+                <img class="logo-img dark-mode" src="assets/assetsryal/images/logo_07b.png" alt="">
+            </div>
+        </a>
+        <div class="un-block-right">
+            <div class="un-notification">
+                <a href="page-activity.html" aria-label="activity">
+                    <i class="ri-notification-line"></i>
                 </a>
-                <div class="un-block-right">
-                    <div class="un-notification">
-                        <a href="page-activity.html" aria-label="activity">
-                            <i class="ri-notification-line"></i>
-                        </a>
-                        <span class="bull-activity"></span>
-                    </div>
-                    <div class="un-user-profile">
-                        <a href="page-my-profile.html" aria-label="profile">
-                            <picture>
-                                <source srcset="assets/assetsryal/images/avatar/11.webp" type="image/webp">
-                                <img class="img-avatar" src="assets/assetsryal/images/avatar/11.jpg" alt="">
-                            </picture>
-                        </a>
-                    </div>
-                    <!-- menu-sidebar -->
-                    <div class="menu-sidebar">
-                        <button type="button" name="sidebarMenu" aria-label="sidebarMenu" class="btn"
-                            data-bs-toggle="modal" data-bs-target="#mdllSidebar-connected">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="9.3" viewBox="0 0 19 9.3">
-                                <g id="Group_8081" data-name="Group 8081" transform="translate(-329 -37)">
-                                    <rect id="Rectangle_3986" data-name="Rectangle 3986" width="19" height="2.3"
-                                        rx="1.15" transform="translate(329 37)" fill="#222032" />
-                                    <rect id="Rectangle_3987" data-name="Rectangle 3987" width="19" height="2.3"
-                                        rx="1.15" transform="translate(329 44)" fill="#222032" />
-                                </g>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-            </header>
+                <span class="bull-activity"></span>
+            </div>
+            <div class="un-user-profile">
+                <a href="page-my-profile.html" aria-label="profile">
+                    <picture>
+                        <source srcset="assets/assetsryal/images/avatar/11.webp" type="image/webp">
+                        <img class="img-avatar" src="assets/assetsryal/images/avatar/11.jpg" alt="">
+                    </picture>
+                </a>
+            </div>
+            <!-- menu-sidebar -->
+            <div class="menu-sidebar">
+                <button type="button" name="sidebarMenu" aria-label="sidebarMenu" class="btn"
+                    data-bs-toggle="modal" data-bs-target="#mdllSidebar-connected">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="19" height="9.3" viewBox="0 0 19 9.3">
+                        <g id="Group_8081" data-name="Group 8081" transform="translate(-329 -37)">
+                            <rect id="Rectangle_3986" data-name="Rectangle 3986" width="19" height="2.3"
+                                rx="1.15" transform="translate(329 37)" fill="#222032" />
+                            <rect id="Rectangle_3987" data-name="Rectangle 3987" width="19" height="2.3"
+                                rx="1.15" transform="translate(329 44)" fill="#222032" />
+                        </g>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </header>
+        <header class="default heade-sticky" [hidden]=" !router.url.includes('/member') ">
+        <div class="un-title-page go-back">
+            <a [routerLink]="['']" class="icon">
+                <i class="ri-arrow-drop-left-line"></i>
+            </a>
+            <span class="color-text size-14 weight-500">@Rocc097</span>
+        </div>
+        <div class="un-block-right">
+            <button type="button" class="btn btn-box-icon bg-snow text-dark" data-bs-toggle="modal"
+                data-bs-target="#mdllShareProfile">
+                <i class="ri-share-forward-line"></i>
+            </button>
+        </div>
+    </header>
