--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,16 +106,16 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="title-modal">Add ETH to your wallet</h1>
+                    <h1 class="title-modal">Ventas y cierre de caja</h1>
                     <button type="button" class="btn btnClose" data-bs-dismiss="modal" aria-label="Close">
                         <i class="ri-close-fill"></i>
                     </button>
                 </div>
                 <div class="modal-body">
                     <div class="content-upload-item">
-                        <p class="text-center">
+                     <!--    <p class="text-center">
                             Select one of the options to deposit <br> ETH to your wallet
-                        </p>
+                        </p> -->
                         <div class="un-navMenu-default margin-t-30 p-0">
                             <ul class="nav flex-column">
                                 <li class="nav-item mb-3">
@@ -124,7 +124,7 @@
                                             <div class="icon color-text w-auto">
                                                 <i class="ri-exchange-box-line"></i>
                                             </div>
-                                            <h3 class="link-title">Deposit from an exchange</h3>
+                                            <h3 class="link-title">Listado de cierres</h3>
                                         </div>
                                         <div class="other-cc">
                                             <span class="badge-text"></span>
@@ -140,7 +140,7 @@
                                             <div class="icon color-text w-auto">
                                                 <i class="ri-bank-card-line"></i>
                                             </div>
-                                            <h3 class="link-title">Buy with card</h3>
+                                            <h3 class="link-title">Procesar cierre de ventas del dia</h3>
                                         </div>
                                         <div class="other-cc">
                                             <span class="badge-text"></span>
