--- a/src/app/components/pages/sumary/sumary.component.html
+++ b/src/app/components/pages/sumary/sumary.component.html
@@ -13,15 +13,15 @@
                             </picture>
                             <div class="txt-user">
                                 <h1>Ryal POS</h1>
-                                <p>0xe388e162b88cvq85f...E162</p>
+                                <p>Beauty Salon Administrator V 1.0</p>
                             </div>
                         </div>
-                        <button type="button" class="btn btn-copy-address">
+                       <!--  <button type="button" class="btn btn-copy-address">
                             <input type="checkbox">
                             <div class="icon-box">
                                 <i class="ri-file-copy-2-line"></i>
                             </div>
-                        </button>
+                        </button> -->
                     </div>
                 </div>
                 <!-- body -->
@@ -39,7 +39,7 @@
                         <button type="button"
                             class="btn btn-md-size effect-click border-primary rounded-pill text-primary"
                             data-bs-toggle="modal" data-bs-target="#mdllAddETH">
-                            Add Balance
+                            Cierres de caja
                         </button>
                     </div>
                 </div>
@@ -53,9 +53,9 @@
                         <a class="nav-link visited" href="page-my-wallet.html">
                             <div class="item-content-link">
                                 <div class="icon bg-green-1 color-green">
-                                    <i class="ri-wallet-line"></i>
+                                    <i class="ri-bookmark-3-line"></i>
                                 </div>
-                                <h3 class="link-title">Servicios</h3>
+                                <h3 class="link-title">Tickets</h3>
                             </div>
                             <div class="other-cc">
                                 <!-- <span class="badge-text"> 0Xe388...E162</span> -->
@@ -141,7 +141,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0)">
                             <div class="item-content-link">
-                                <div class="icon bg-snow text-dark">
+                                <div class="icon bg-pink-1 color-pink">
                                     <i class="ri-brush-fill"></i>
                                 </div>
                                 <h3 class="link-title">Servicios</h3>
