--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,76 +1,121 @@
-     <!-- Start login section  -->
-        <div class="login__section section--padding">
-            <div class="container">
-                <form action="login.html#">
-                    <div class="login__section--inner">
-                        <div class="row row-cols-md-2 row-cols-1">
-                            <div class="col-12">
-                                <div class="account__login">
-                                    <div class="account__login--header mb-25">
-                                        <h2 class="account__login--header__title mb-10">Inicio de session</h2>
-                                        <p class="account__login--header__desc">Ingresa al area del cliente</p>
-                                    </div>
-                                    <div class="account__login--inner">
-                                        <label>
-                                            <input class="account__login--input" placeholder="Email" type="email">
-                                        </label>
-                                        <label>
-                                            <input class="account__login--input" placeholder="Contraseña" type="password">
-                                        </label>
-                                        <div class="account__login--remember__forgot mb-15 d-flex justify-content-between align-items-center">
-                                            <div class="account__login--remember position__relative">
-                                                <input class="checkout__checkbox--input" id="check1" type="checkbox">
-                                                <span class="checkout__checkbox--checkmark"></span>
-                                                <label class="checkout__checkbox--label login__remember--label" for="check1">
-                                                    Recordar</label>
-                                            </div>
-                                            <button class="account__login--forgot"  type="submit">Olvidó su contraseña?</button>
-                                        </div>
-                                        <button class="account__login--btn primary__btn" type="submit">Entrar</button>
-                                       <!--  <div class="account__login--divide">
-                                            <span class="account__login--divide__text">OR</span>
-                                        </div>
-                                        <div class="account__social d-flex justify-content-center mb-15">
-                                            <a class="account__social--link facebook" target="_blank" href="https://www.facebook.com">Facebook</a>
-                                            <a class="account__social--link google" target="_blank" href="https://www.google.com">Google</a>
-                                            <a class="account__social--link twitter" target="_blank" href="https://twitter.com">Twitter</a>
-                                        </div> -->
-                                        <p class="account__login--signup__text">No tiene cuenta aún? <button type="submit">Registrese ahora</button></p>
-                                    </div>
+   <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+
+           <div class="space-sticky"></div>
+            <!-- ===================================
+              START THE FORM
+            ==================================== -->
+            <section class="account-section padding-20">
+                <div class="display-title">
+                    <h1>Inicio de session!</h1>
+                    <p>Ingrese su correo y su contrasena para continuar</p>
+                </div>
+             <!--    <div class="connect-with-apps">
+                    <a href="page-signin.html#" class="apple">
+                        <i class="ri-apple-fill"></i>
+                    </a>
+                    <a href="page-signin.html#" class="google">
+                        <img src="images/icons/google.svg" alt="google">
+                    </a>
+                    <a href="page-signin.html#" class="facebook">
+                        <i class="ri-facebook-circle-fill"></i>
+                    </a>
+                </div> -->
+  <!--               <div class="dividar_or">
+                    <span>or</span>
+                </div> -->
+                <div class="content__form margin-t-24">
+       <!--              <form>
+                        <div class="form-group icon-left">
+                            <label>Email </label>
+                            <div class="input_group">
+                                <input type="email" class="form-control" placeholder='e. g. "example@mail.com"'
+                                    required>
+                                <div class="icon">
+                                    <i class="ri-mail-open-line"></i>
                                 </div>
                             </div>
-                           <!--  <div class="col">
-                                <div class="account__login register">
-                                    <div class="account__login--header mb-25">
-                                        <h2 class="account__login--header__title mb-10">Create an Account</h2>
-                                        <p class="account__login--header__desc">Register here if you are a new customer</p>
-                                    </div>
-                                    <div class="account__login--inner">
-                                        <label>
-                                            <input class="account__login--input" placeholder="Username" type="text">
-                                        </label>
-                                        <label>
-                                            <input class="account__login--input" placeholder="Email Addres" type="email">
-                                        </label>
-                                        <label>
-                                            <input class="account__login--input" placeholder="Password" type="password">
-                                        </label>
-                                        <label>
-                                            <input class="account__login--input" placeholder="Confirm Password" type="password">
-                                        </label>
-                                        <button class="account__login--btn primary__btn mb-10" type="submit">Submit & Register</button>
-                                        <div class="account__login--remember position__relative">
-                                            <input class="checkout__checkbox--input" id="check2" type="checkbox">
-                                            <span class="checkout__checkbox--checkmark"></span>
-                                            <label class="checkout__checkbox--label login__remember--label" for="check2">
-                                                I have read and agree to the terms & conditions</label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div> -->
                         </div>
+                        <div class="form-group icon-left">
+                            <label>Password</label>
+                            <div class="input_group">
+                                <input type="password" class="form-control" placeholder='e. g. "John$99*04"' required>
+                            
+                                <div class="icon">
+                                    <i class="ri-lock-password-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </form> -->
+
+
+                  
+                       <!--  <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Email</label>
+                          <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp">
+                        </div> -->
+
+                        <div class="form-group icon-left">
+                            <label>Email </label>
+                            <div class="input_group">
+                                <input type="email" formControlName="email" class="form-control" placeholder='e. g. "example@mail.com"'
+                                    required>
+                                <div class="icon">
+                                    <i class="ri-mail-open-line"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                          <div class="form-group icon-left">
+                            <label>Password</label>
+                            <div class="input_group">
+                                <input  formControlName="password" type="password" class="form-control" id="exampleInputPassword1" placeholder='e. g. "John$99*04"' required>
+                            
+                                <div class="icon">
+                                    <i class="ri-lock-password-line"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+                     <!--    <div class="mb-3">
+                          <label for="exampleInputPassword1" class="form-label">Password</label>
+                          <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1">
+                        </div> -->
+
+               <!--          <div class="d-grid">
+                          <button type="submit" class="btn btn-info">Entrar</button>
+                        </div> -->
+                      
+                 
+
+
+                </div>
+            </section>
+            <!-- ===================================
+              START ACCOUT FOOTER
+            ==================================== -->
+            <footer class="footer-account">
+                <div class="env-pb">
+                    <div class="display-actions">
+                           <button type="submit"  class="btn btn-sm-arrow bg-primary" style="color:white;">Entrar</button>
+                      <!--   <a type="submit" class="btn btn-sm-arrow bg-primary">
+                            <p>Entrar</p>
+                            <div class="ico">
+                                <i class="ri-arrow-drop-right-line"></i>
+                            </div>
+
+                        </a> -->
+ <div class="ico">
+                                <i class="ri-arrow-drop-right-line"></i>
+                            </div>
                     </div>
-                </form>
-            </div>     
-        </div>
-        <!-- End login section  -->
+                    <div class="dividar"></div>
+                    <div class="support">
+                        <p>Ryal POS V 1.0 by <a href="https://www.buckapi.us" target="_blanck">buckapi.us</a></p>
+                    </div>
+                </div>
+            </footer>
+             </form>
