--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,11 +81,11 @@
                             
                         </p>
                         <div class="grid_buttonUpload">
-                            <a href="page-create-multi.html"
+                            <a 
                                 class="btn btn-create bg-white border border-solid border-snow text-dark margin-b-20">
                                 Servicio unico
                             </a>
-                            <a href="page-create-single.html" class="btn btn-create bg-primary text-white margin-b-20">
+                            <a  class="btn btn-create bg-primary text-white margin-b-20">
                                 Multiples servicios
                             </a>
                         </div>
@@ -214,7 +214,7 @@
                 <div class="modal-body">
                     <ul class="nav flex-column -active-links">
                         <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['']">
+                            <a class="nav-link" [routerLink]="['/sumary']">
                                 <div class="icon_current">
                                          <i class="ri-home-3-line"></i>
 
