--- a/src/app/components/pages/sumary/sumary.component.html
+++ b/src/app/components/pages/sumary/sumary.component.html
@@ -50,7 +50,7 @@
             <section class="un-navMenu-default without-visit">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link visited" href="page-my-wallet.html">
+                        <a class="nav-link visited" >
                             <div class="item-content-link">
                                 <div class="icon bg-green-1 color-green">
                                     <i class="ri-bookmark-3-line"></i>
@@ -139,7 +139,7 @@
                     </li> -->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript: void(0)">
+                        <a class="nav-link" >
                             <div class="item-content-link">
                                 <div class="icon bg-pink-1 color-pink">
                                     <i class="ri-brush-fill"></i>
@@ -215,7 +215,7 @@
                     </div>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="homepage.html">
+                        <a class="nav-link">
                             <div class="item-content-link">
                                 <div class="icon bg-snow text-dark">
                                     <i class="ri-logout-box-r-line"></i>
